feat: config sqllite
